# miniml

./: .gitignore  CLAUDE.md  Makefile  README.md  dune  dune-project
bin_native/: dune  main.ml
compiler_test/: analysis_selfhost_check.mml  completions_selfhost_check.mml  cst_roundtrip_runner.ml  diag_selfhost_check.mml  diagnostics_selfhost_check.mml  dune  fmt_selfhost_parity.sh  format_runner.ml  hover_def_selfhost_check.mml  ir_parity.sh  ir_parity_runner.ml  json_selfhost_check.mml  lsp_project_check.mml  lsp_selfhost_check.mml  lsp_serve_e2e.py  parity_runner.ml
compiler_test/ir_corpus/: closures.mml  effects.mml  lists.mml  module.mml  nested_match.mml  options.mml  records.mml  recursion.mml  typeclass.mml  variants.mml
cross_test/: README.md  dune  parallel.js  run_all.sh  run_emit_js.js  run_js.js  run_playground.js  runner.ml  test_format.ml  test_parser.js
cross_test/tests/: constraint_stress.tests  core.tests  data_structures.tests  edge_case_regressions.tests  effects.tests  float_format.tests  fundep_callsite.tests  fundep_poly_reuse.tests  fundeps_stress.tests  gadts.tests  gap_check.tests  gap_single.tests  indexing.tests  let_mut_annot.tests  loops.tests  map_update.tests  modules.tests  newtypes.tests  optimizer.tests  pattern_matching.tests  pinning.tests  poly_hash.tests  polyvariants.tests  record_field_resolution.tests  recursive_values.tests  stdlib.tests  string_interpolation.tests  sys_io.tests  type_and_modules.tests  typeclasses.tests  types.tests  utf8.tests
diff_test/: README.md  diff_runner.ml  differential.ml  dune  fuzz_runner.ml  generator.ml  shrink_runner.ml  shrinker.ml
diff_test/smoke/: data.mml  effects.mml  nondeterministic.mml  print_value.mml
docs/: compiler.md  effect-lowering.md  effects.md  freeze-point.md  ir-contract.md  js-backend.md  language.md  lsp.md  packages.md  semantics.md  stdlib.md  syntax.md
editors/tree-sitter-miniml/: .gitignore  grammar.js  package.json
editors/tree-sitter-miniml/queries/: highlights.scm
editors/tree-sitter-miniml/src/: grammar.json  node-types.json  parser.c
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/mml/: config.toml
editors/zed/src/: lib.rs
js/: browser.js  build_stdlib_bundle.js  builtins.js  compiler_native.js  index.html  loader.js  miniml-harness.js  test.js  vm.js
lib/: analysis.ml  analyze.ml  ast.ml  bytecode.ml  compiler.ml  cst.ml  cst_build.ml  deps.ml  deserialize.ml  deserialize_bin.ml  diagnostic.ml  digest.ml  dune  fetch.ml  formatter.ml  fs.ml  iO.ml  interp.ml  ir_analysis.ml  ir_serialize.ml  js_codegen.ml  lexer.ml  lsp.ml  manifest.ml  match_tree.ml  match_tree_types.ml  optimize.ml  oracle.ml  parser.ml  path.ml  pipeline.ml  process.ml  project.ml  semver.ml  serialize.ml  serialize_bin.ml  std.ml  sumfile.ml  texpr_opt.ml  token.ml  (+4 more)
lib/native/: codegen.ml  driver.ml  dune  float_bits.ml  ir_emit.ml
native_rt/: context.h  context_arm64.S  context_x86_64.S  mml_gc.c  mml_gc.h  mml_gc_test.c  runtime.c  runtime.h
native_test/: dune  runner.ml
self_host/: analysis.mml  ast.mml  bytecode.mml  codegen.mml  compiler.mml  cst.mml  cst_build.mml  deps.mml  diagnostic.mml  driver.mml  fetch.mml  formatter.mml  ir_analysis.mml  ir_emit.mml  ir_serialize.mml  js_codegen.mml  json.mml  lexer.mml  lsp.mml  main.mml  manifest.mml  match_tree.mml  match_tree_types.mml  mml.mml  optimize.mml  parser.mml  pipeline.mml  project.mml  semver.mml  serialize.mml  sumfile.mml  texpr_opt.mml  token.mml  typechecker.mml  types.mml  utf8.mml
stdlib/: array_extra.mml  buffer.mml  builtins.mml  byte.mml  classes.mml  compat.mml  digest.mml  dynarray.mml  enum.mml  eq.mml  fmt.mml  fs.mml  hash.mml  hashtbl.mml  iter.mml  iter_map.mml  list.mml  map.mml  map_class.mml  math.mml  option.mml  ord.mml  path.mml  process.mml  ref.mml  result.mml  rune.mml  seq.mml  set.mml  show.mml
tasks/: cleanup  findings
test/: dune  test_completion.ml  test_core.ml  test_cst.ml  test_data_structures.ml  test_definition.ml  test_deps.ml  test_diagnostics.ml  test_effects.ml  test_fetch.ml  test_formatter.ml  test_gadts.ml  test_helpers.ml  test_hover.ml  test_loops.ml  test_lsp.ml  test_modules.ml  test_pattern_matching.ml  test_project.ml  test_stdlib.ml  test_typeclasses.ml  test_types.ml  test_workspace_index.ml
tools/: gen_stdlib_sources.ml
tools/ocaml_to_mml/: dune  main.ml
translate_test/: dune  runner.ml
translate_test/tests/: translate.tests
